--- a/src/App.css
+++ b/src/App.css
@@ -78,17 +78,20 @@ body {
 .blur-table {
   filter: blur(2px);
   pointer-events: none;
-
-  /* Prevent interaction with the blurred content */
 }
 
 .disabled-div {
   pointer-events: none;
-  /* Prevent clicks */
   opacity: 0.5;
-  /* Make it look disabled */
 }
 
 .position {
   top: -5px;
+}
+
+/* employee salary style*/
+@media (min-width:250px) and (max-width : 320px) {
+  .position1 {
+    top: -150px !important;
+  }
 }
